<resources>
    <string name="app_name">CourtReservation</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_picture">profile_picture</string>
    <string name="save">Save</string>
    <string name="account_info">Account Info</string>
    <string name="username">Username</string>
    <string name="username_placeholder">Username</string>
    <string name="exit_no_save">Do you want to save the changes?</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="email_placeholder">Email</string>
    <string name="address">Address</string>
    <string name="address_placeholder">Address</string>
    <string name="gender_placeholder">F | M | Other</string>
    <string name="gender">Gender</string>
    <string name="height">Height (cm)</string>
    <string name="height_placeholder">Height</string>
    <string name="weight">Weight (Kg)</string>
    <string name="weight_placeholder">Weight</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_placeholder">Phone number</string>
    <string name="version">Version 1.0.1</string>
    <string name="full_name_placeholder">Full name</string>
    <string name="hint_username">Username</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_height">Height: max=260</string>
    <string name="hint_weight">Weight: max=150</string>
    <string name="hint_phone_number">+00 0000 0000</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="edit_profile_warning">Invalid height/weight</string>
    <string name="dismiss">Dismiss</string>
    <string name="home_button_title">Home</string>
    <string name="explore_button_title">Explore</string>
    <string name="calendar_button_title">Calendar</string>
    <string name="chat_button_title">Chat</string>
    <string name="profile_button_title">Profile</string>
    <string name="profile_page_title">Profile</string>
    <string name="social_page_title">Friends</string>
    <string name="social_page_subtitle">It\'s more fun together!</string>
    <string name="at_username">\u0040username</string>
    <string name="email_example">email@example.com</string>
    <string name="address_example">Via Roma 1, Riva presso Chieri</string>
    <string name="first_name_example">Hideo</string>
    <string name="last_name_example">Kojima</string>
    <string name="height_example">183 cm</string>
    <string name="weight_example">89 kg</string>
    <string name="phone_example">+39 331 12345678</string>
    <string name="logout">Log out</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_heading">Discover</string>
    <string name="category_subheading">Categories</string>
    <string name="soccer">Soccer</string>
    <string name="iceskate">Iceskate</string>
    <string name="basketball">Basketball</string>
    <string name="hockey">Hockey</string>
    <string name="tennis">Tennis</string>
    <string name="volleyball">Volley</string>
    <string name="rugby">Rugby</string>
    <string name="available_heading">Available Now</string>
    <string name="description1_subheading">Sports centers available now</string>
    <string name="link_seeall">See All</string>
    <string name="sportsplex">Sportsplex</string>
    <string name="popular_heading">Popular Centers</string>
    <string name="description2_subheading">Discover popular sports centers </string>
    <string name="location_center">Oak Park</string>
    <string name="my_reservations_heading">Reservations</string>
    <string name="my_reservations_subheading">Browse your reservations</string>
    <string name="location_town">Oak Park - New York, NY</string>
    <string name="where">Where:</string>
    <string name="when">When:</string>
    <string name="sample_date_time">19/09/2023 – 15:30</string>
    <string name="services_heading">Services</string>
    <string name="req_services_heading">Requested services</string>
    <string name="service_description_subheading">Select any service you\'ll need!</string>
    <string name="info_heading">Info</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="confirm_cancel_reserv">Are you sure you want to cancel your reservation?</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="reserv_cancel_ok">Your reservation was successfully canceled</string>
    <string name="special_requests_heading">Special requests</string>
    <string name="upcoming_title">Upcoming reservations</string>
    <string name="past_title">Past reservations</string>
    <string name="available_now">Available Now</string>
    <string name="description">Description</string>
    <string name="courts">Courts</string>
    <string name="reviews">Reviews</string>
    <string name="title_activity_leave_rating">LeaveRatingActivity</string>
    <string name="title_activity_profile_achievements">ProfileAchievements</string>
    <string name="title_activity_add_edit_interest">AddEditInterest</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="leave_review">Leave a review</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="reserve">Reserve</string>
    <string name="special_requests">Special Requests</string>
    <string name="write_here_any_special_requests">Write here any special requests...</string>
    <string name="service_icon">service_icon</string>
    <string name="service_name">service_name</string>
    <string name="service_cost">x.xx $</string>
    <string name="summary">Summary</string>
    <string name="here_s_a_summary_of_your_order">Here\'s a summary of your order</string>
    <string name="sportcentername">SportCenterName</string>
    <string name="sportcenter_address">SportCenter Address</string>
    <string name="social">Social</string>
    <string name="nnn_reviews">nnn reviews</string>
    <string name="review_placeholder">As a tennis enthusiast, I\'ve played on my fair share of courts, but none have left a lasting impression quite like the Sunnyside Tennis Center.</string>
    <string name="courtName">Courtname</string>
    <string name="schedule">Schedule</string>
</resources>