<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home_button_title"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/explore"
        android:title="@string/explore_button_title"
        android:icon="@drawable/compass"/>
    <item
        android:id="@+id/calendar"
        android:title="@string/calendar_button_title"
        android:icon="@drawable/calendar"/>
    <item
            android:id="@+id/chat"
            android:title="@string/chat_button_title"
            android:icon="@drawable/chat"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile_button_title"
        android:icon="@drawable/profile"/>
</menu>