<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" android:id="@+id/mainLL"
        android:foreground="@drawable/shape_window_dim"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
    >

        <ImageView
                android:id="@+id/imageView3"
                android:contentDescription="@string/profile_picture"
                tools:src="@drawable/gesu"
                tools:srcCompat="@drawable/gesu"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintDimensionRatio="W,1:1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
        />

        <View
                android:layout_width="0dp"
                android:layout_height="0dp" android:id="@+id/view2"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:background="#58222222"/>
        <ImageButton
                android:layout_width="0dp"
                android:layout_height="0dp" app:srcCompat="@drawable/colored_camera_icon"
                android:id="@+id/camera_button"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3" app:layout_constraintVertical_bias="0.0"
                android:rotation="0" app:layout_constraintHorizontal_bias="0.0"
                android:background="#771E1E1E"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="2">
        <TextView
                android:text="@string/account_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                android:textAppearance="@style/CategoryTitle" android:layout_marginStart="16dp"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="16dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="66.7" android:gravity="center_horizontal">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center" android:weightSum="100"
                        android:layout_marginBottom="10sp">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="50sp" app:srcCompat="@drawable/icons8_user_100"
                            android:layout_weight="15" android:padding="5sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:layout_weight="85">
                        <TextView
                                android:text="@string/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textAppearance="@style/ListItemTitle" android:layout_marginStart="4sp"/>
                        <EditText
                                android:id="@+id/editUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_username"
                                android:inputType="text"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center" android:weightSum="100"
                        android:layout_marginBottom="10sp">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="50sp" app:srcCompat="@drawable/icons8_identification_documents_100"
                            android:layout_weight="15" android:padding="5sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:layout_weight="85">
                        <TextView
                                android:text="@string/full_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textAppearance="@style/ListItemTitle" android:layout_marginStart="4sp"/>
                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                            <EditText
                                    android:id="@+id/editFirstName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"
                                    android:hint="@string/hint_first_name"
                                    android:inputType="text"/>
                            <EditText
                                    android:id="@+id/editLastName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="50"
                                    android:hint="@string/hint_last_name"
                                    android:inputType="text"/>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center" android:weightSum="100"
                        android:layout_marginBottom="10sp">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="45sp" app:srcCompat="@drawable/icons8_mail_100"
                            android:layout_weight="15" android:padding="5sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:layout_weight="85">
                        <TextView
                                android:text="@string/email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textAppearance="@style/ListItemTitle" android:layout_marginStart="4sp"/>

                        <EditText
                                android:id="@+id/editEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_email"
                                android:inputType="text|textEmailAddress"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center" android:weightSum="100"
                        android:layout_marginBottom="10sp">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="50sp" app:srcCompat="@drawable/icons8_location_100__1_"
                            android:layout_weight="15" android:padding="5sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:layout_weight="85">
                        <TextView
                                android:text="@string/address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textAppearance="@style/ListItemTitle" android:layout_marginStart="4sp"/>
                        <EditText
                                android:id="@+id/editAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_address"
                                android:inputType="text"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" android:layout_marginBottom="10sp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center" android:weightSum="100"
                        android:layout_marginBottom="10sp">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="50sp" app:srcCompat="@drawable/icons8_gender_equality_100"
                            android:layout_weight="15" android:padding="5sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:layout_weight="85">
                        <TextView
                                android:text="@string/gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textAppearance="@style/ListItemTitle" android:layout_marginStart="4sp"/>
                        <Spinner
                                android:id="@+id/editGender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:drawable/btn_dropdown"
                                android:spinnerMode="dropdown"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:gravity="center" android:weightSum="100"
                        android:layout_marginBottom="10sp" android:padding="5sp">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="50sp" app:srcCompat="@drawable/icons8_length_100"
                            android:layout_weight="15" android:padding="5sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:layout_weight="85">
                        <TextView
                                android:text="@string/height"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textAppearance="@style/ListItemTitle" android:layout_marginStart="4sp"/>

                        <EditText
                                android:id="@+id/editHeight"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_height"
                                android:inputType="text|numberDecimal"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:gravity="center" android:weightSum="100"
                        android:layout_marginBottom="10sp" android:padding="5sp">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="50sp" app:srcCompat="@drawable/icons8_scale_100"
                            android:layout_weight="15" android:padding="5sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:layout_weight="85">
                        <TextView
                                android:text="@string/weight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textAppearance="@style/ListItemTitle" android:layout_marginStart="4sp"/>

                        <EditText
                                android:id="@+id/editWeight"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_weight"
                                android:inputType="text|numberDecimal"/>
                    </LinearLayout>
                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" android:id="@+id/view"
                        android:layout_marginBottom="10sp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="center" android:weightSum="100"
                        android:layout_marginBottom="10sp">
                    <ImageView
                            android:layout_width="0dp"
                            android:layout_height="45sp" app:srcCompat="@drawable/icons8_phone_100"
                            android:layout_weight="15" android:padding="5sp"/>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:layout_weight="85">
                        <TextView
                                android:text="@string/phone_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textAppearance="@style/ListItemTitle" android:layout_marginStart="4sp"/>

                        <EditText
                                android:id="@+id/editPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_phone_number"
                                android:inputType="text|phone"/>
                    </LinearLayout>
                </LinearLayout>
                <TextView
                        android:text="@string/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" android:layout_marginTop="30sp"
                        android:layout_marginBottom="30sp" android:textAlignment="center"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>